UPD: Added new array generator code 	modified:   Atividades/Atividade 01/AT01.md 	modified:   Atividades/Atividade 01/AT01.py

--- a/Atividades/Atividade 01/AT01.md
+++ b/Atividades/Atividade 01/AT01.md
@@ -5,10 +5,10 @@
 - [ ] - **Atividade 01**
   - [x] - Receber argumentos de entrada/saida
   - [x] - Leitura dos arquivos
-  - [ ] - Modos do arquivo final
-    - [ ] - "**C**" crescente
-    - [ ] - "**D**" decrescente
-    - [ ] - "**R**" randomico
+  - [x] - Modos de geração
+    - [x] - "**C**" crescente
+    - [x] - "**D**" decrescente
+    - [x] - "**R**" randomico
   - [ ] - Metodos de Ordenação  
     - [ ] - **Insertion** Sort
     - [ ] - **Selection** Sort
@@ -17,3 +17,6 @@
     - [ ] - **Quick** Sort
     - [ ] - **Heap** Sort
   - [ ] - Gerar arquivo de saida
+    - [ ] - "**C**" crescente
+    - [ ] - "**D**" decrescente
+    - [ ] - "**R**" randomico  
