UPD: added Insertion sort, somo modification in array generation 	modified:   .gitignore 	modified:   Atividades/Atividade 01/AT01.md 	modified:   Atividades/Atividade 01/AT01.py 	modified:   Atividades/Atividade 01/sortType.py 	modified:   README.md

--- a/Atividades/Atividade 01/AT01.md
+++ b/Atividades/Atividade 01/AT01.md
@@ -6,11 +6,11 @@
   - [x] - Receber argumentos de entrada/saida
   - [x] - Leitura dos arquivos
   - [x] - Modos de geração
-    - [x] - "**C**" crescente
-    - [x] - "**D**" decrescente
+    - [x] - "**C**" crescente \*
+    - [x] - "**D**" decrescente \*
     - [x] - "**R**" randomico
   - [ ] - Metodos de Ordenação  
-    - [ ] - **Insertion** Sort
+    - [x] - **Insertion** Sort
     - [ ] - **Selection** Sort
     - [ ] - **Bubble** Sort
     - [ ] - **Merge** Sort
@@ -20,3 +20,5 @@
     - [ ] - "**C**" crescente
     - [ ] - "**D**" decrescente
     - [ ] - "**R**" randomico  
+
+> \* - *Verificar os modos de geração pois no documento não está  bem definido, logo eu posso estar complicando algo que era para ser facil*  
