UPD: Added selection sort
Added selection sort and updated AT01.md
	modified:   Atividades/Atividade 01/AT01.md
	modified:   Atividades/Atividade 01/arraySorting.py

--- a/Atividades/Atividade 01/AT01.md
+++ b/Atividades/Atividade 01/AT01.md
@@ -11,8 +11,8 @@
     - [x] - "**R**" randomico
   - [ ] - Metodos de Ordenação  
     - [x] - **Insertion** Sort
-    - [ ] - **Selection** Sort
-    - [ ] - **Bubble** Sort
+    - [x] - **Selection** Sort
+    - [x] - **Bubble** Sort
     - [ ] - **Merge** Sort
     - [ ] - **Quick** Sort
     - [ ] - **Heap** Sort
