UPD: Added HeapSort,Avaliaçao 01 and renamed some folders 	renamed:    Atividades/Atividade 01/AT01.md -> Atividades/Atividade_01/AT01.md 	renamed:    Atividades/Atividade 01/AT01.py -> Atividades/Atividade_01/AT01.py 	renamed:    Atividades/Atividade 01/arraySorting.py -> Atividades/Atividade_01/arraySorting.py 	new file:   "Avalia\303\247\303\265es/Avalia\303\247\303\243o_01/AV01.py" 	new file:   "Avalia\303\247\303\265es/Avalia\303\247\303\243o_01/Avalia\303\247\303\243o_01.zip" 	new file:   "Avalia\303\247\303\265es/Avalia\303\247\303\243o_01/quickSort.py"

--- a/Atividades/Atividade_01/AT01.md
+++ b/Atividades/Atividade_01/AT01.md
@@ -13,9 +13,10 @@
     - [x] - **Insertion** Sort
     - [x] - **Selection** Sort
     - [x] - **Bubble** Sort
-    - [ ] - **Merge** Sort
-    - [ ] - **Quick** Sort
-    - [ ] - **Heap** Sort
+    - [x] - **Merge** Sort
+    - [x] - **Quick** Sort
+    - [x] - **Heap** Sort
+    - [ ] - **Tree** Sort / **Burst** Sort
   - [ ] - Gerar arquivo de saida
     - [ ] - "**C**" crescente
     - [ ] - "**D**" decrescente
