--- a/Atividades/Atividade_01/AT01.md
+++ b/Atividades/Atividade_01/AT01.md
@@ -2,24 +2,24 @@
 
 ## Goals marks
 
-- [ ] - **Atividade 01**
+- [x] - **Atividade 01**
   - [x] - Receber argumentos de entrada/saida
   - [x] - Leitura dos arquivos
   - [x] - Modos de geração
     - [x] - "**C**" crescente \*
     - [x] - "**D**" decrescente \*
     - [x] - "**R**" randomico
-  - [ ] - Metodos de Ordenação  
+  - [x] - Metodos de Ordenação  
     - [x] - **Insertion** Sort
     - [x] - **Selection** Sort
     - [x] - **Bubble** Sort
     - [x] - **Merge** Sort
     - [x] - **Quick** Sort
     - [x] - **Heap** Sort
-    - [ ] - **Tree** Sort / **Burst** Sort
-  - [ ] - Gerar arquivo de saida
-    - [ ] - "**C**" crescente
-    - [ ] - "**D**" decrescente
-    - [ ] - "**R**" randomico  
+    - [x] - **Tree** Sort
+  - [x] - Gerar arquivo de saida
+    - [x] - "**C**" crescente
+    - [x] - "**D**" decrescente
+    - [x] - "**R**" randomico  
 
 > \* - *Verificar os modos de geração pois no documento não está  bem definido, logo eu posso estar complicando algo que era para ser facil*  
